[project]
name = "cagrx"
version = "0.1.0"
description = "A Python library to calculate return metrics like CAGR, XIRR, and SIP returns using AMFI data"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
cagrx = "cagrx:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
